[gd_scene load_steps=29 format=2]

[ext_resource path="res://Sprites/Plain.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Grave.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Cactus.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Spikes.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Animal.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Sheep.png" type="Texture" id=7]
[ext_resource path="res://Sprites/LampPost.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Torch.png" type="Texture" id=9]
[ext_resource path="res://Sprites/LightSpot.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://Pixeboy-z8XGD.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Sprites/Sign.png" type="Texture" id=13]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=14]
[ext_resource path="res://Music/LowBeep.wav" type="AudioStream" id=15]
[ext_resource path="res://Music/HighBeep.wav" type="AudioStream" id=16]
[ext_resource path="res://Sprites/Player.png" type="Texture" id=17]
[ext_resource path="res://Music/Theme1.wav" type="AudioStream" id=18]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.9848

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 12 )

[sub_resource type="CircleShape2D" id=4]
radius = 40.0

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 12 )

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="Animation" id=8]
resource_name = "startscreenknight"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label10:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 90, 110, 90 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label10:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.482353, 0.552941, 1, 1 ), Color( 0.482353, 1, 0.756863, 1 ), Color( 0.482353, 0.552941, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label10/Player:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 288 ), Vector2( 112, 320 ), Vector2( 184, 280 ), Vector2( 112, 320 ), Vector2( 40, 288 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label11:custom_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.556863, 0.556863, 1 ), Color( 0.705882, 1, 0.992157, 1 ), Color( 0.964706, 0.992157, 0.615686, 1 ), Color( 0.752941, 0.74902, 0.74902, 1 ) ]
}

[sub_resource type="CanvasItemMaterial" id=9]
light_mode = 1

[sub_resource type="DynamicFont" id=10]
size = 45
font_data = ExtResource( 12 )

[node name="MainMenu" type="Node"]
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 264, 152 )
scale = Vector2( 103, 56.5 )
texture = ExtResource( 5 )

[node name="SampleSprites" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SampleSprites"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="SampleSprites"]
position = Vector2( 64, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="SampleSprites"]
position = Vector2( 64, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="SampleSprites"]
position = Vector2( 128, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="SampleSprites"]
position = Vector2( 192, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="SampleSprites"]
position = Vector2( 192, 128 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite7" type="Sprite" parent="SampleSprites"]
position = Vector2( 128, 128 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Sprite8" type="Sprite" parent="SampleSprites"]
position = Vector2( 128, 192 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite16" type="Sprite" parent="SampleSprites"]
position = Vector2( 256, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite17" type="Sprite" parent="SampleSprites"]
position = Vector2( 320, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite18" type="Sprite" parent="SampleSprites"]
position = Vector2( 384, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite19" type="Sprite" parent="SampleSprites"]
position = Vector2( 256, 224 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite20" type="Sprite" parent="SampleSprites"]
position = Vector2( 256, 224 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite22" type="Sprite" parent="SampleSprites"]
position = Vector2( 448, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite25" type="Sprite" parent="SampleSprites"]
position = Vector2( 512.5, 288 )
scale = Vector2( 2.03125, 2 )
texture = ExtResource( 1 )

[node name="Sprite26" type="Sprite" parent="SampleSprites"]
position = Vector2( 577, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite27" type="Sprite" parent="SampleSprites"]
position = Vector2( 641, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite23" type="Sprite" parent="SampleSprites"]
position = Vector2( 640, 264 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )

[node name="Sprite24" type="Sprite" parent="SampleSprites"]
position = Vector2( 336, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Sprite28" type="Sprite" parent="SampleSprites"]
position = Vector2( 418, 288 )
scale = Vector2( 3, 3 )
texture = ExtResource( 13 )

[node name="Sprite21" type="Sprite" parent="SampleSprites"]
position = Vector2( 248, 216 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Sprite9" type="Sprite" parent="SampleSprites"]
position = Vector2( 192, 192 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Sprite11" type="Sprite" parent="SampleSprites"]
position = Vector2( 128, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite12" type="Sprite" parent="SampleSprites"]
position = Vector2( 192, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite13" type="Sprite" parent="SampleSprites"]
position = Vector2( 192, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite14" type="Sprite" parent="SampleSprites"]
position = Vector2( 128, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite10" type="Sprite" parent="SampleSprites"]
position = Vector2( 192, 128 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Sprite15" type="Sprite" parent="SampleSprites"]
position = Vector2( 130, 310 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Lights" type="Node2D" parent="."]

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( 336, 280 )
texture = ExtResource( 10 )
color = Color( 0.988235, 0.929412, 0.431373, 1 )

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( 640, 264 )
texture = ExtResource( 10 )
texture_scale = 1.5
color = Color( 0.988235, 0.929412, 0.431373, 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="TutorialFinish" type="Area2D" parent="."]
position = Vector2( 640, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TutorialFinish"]
shape = SubResource( 1 )

[node name="Spikes" type="Area2D" parent="."]
position = Vector2( 192, 128 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikes"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Spikes"]
stream = ExtResource( 15 )
volume_db = 10.0

[node name="Label" type="Label" parent="."]
margin_left = -32.0
margin_top = -80.0
margin_right = 200.0
margin_bottom = -47.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "use wasd or arrow keys
to move :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -56.0
margin_top = 112.0
margin_right = 216.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "You can step on 
that grave





and on that cactus"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 240.0
margin_top = 104.0
margin_right = 512.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Don't step on
these ! (They are hidden)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 240.0
margin_top = 152.0
margin_right = 512.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "These sheeps will spawn if you die, to eat your torches off."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 228.0
margin_top = 336.0
margin_right = 500.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Collect 14 
of these"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="."]
margin_left = 384.0
margin_top = 200.0
margin_right = 752.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Place these
wherever you
 feel 





with right click
or left shift."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="."]
margin_left = 584.0
margin_top = 336.0
margin_right = 856.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Let's GOO !!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="."]
margin_left = 120.0
margin_top = -16.0
margin_right = 392.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Beware of deceptive
traps !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 24.0
margin_top = 384.0
margin_right = 296.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "These Rabid dogs will
hunt you"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torches" type="Area2D" parent="."]
position = Vector2( 336, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torches"]
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Torches"]
stream = ExtResource( 16 )
volume_db = 8.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Label10" type="Label" parent="."]
material = SubResource( 5 )
margin_left = -320.0
margin_top = -216.0
margin_right = 248.0
margin_bottom = -119.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.482353, 0.552941, 1, 1 )
text = "Deception 
Knight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Sprite" parent="Label10"]
modulate = Color( 0.282353, 0.776471, 0.941176, 1 )
material = SubResource( 7 )
position = Vector2( 40, 288 )
scale = Vector2( 10, 10 )
texture = ExtResource( 17 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/startscreenknight = SubResource( 8 )

[node name="Label11" type="Label" parent="."]
material = SubResource( 9 )
margin_left = -376.0
margin_top = 289.0
margin_right = 197.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "By SnoopSnoopNacho"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 11 )]

[node name="Light2D2" type="Light2D" parent="Player"]
texture = ExtResource( 10 )
texture_scale = 3.0
color = Color( 1, 0.964706, 0.415686, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -5.0

[node name="Starttm" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="body_entered" from="TutorialFinish" to="." method="_on_TutorialFinish_body_entered"]
[connection signal="body_entered" from="Spikes" to="." method="_on_Spikes_body_entered"]
[connection signal="body_entered" from="Torches" to="." method="_on_Torches_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Starttm" to="." method="_on_Starttm_timeout"]
